[gd_scene load_steps=15 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://play_ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tok.wav" type="AudioStream" id=4]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.258824, 0.258824, 0.258824, 0.00392157 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.792157, 0.176471, 0.176471, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.839216, 0.168627, 0.168627, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.890196, 0.156863, 0.156863, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.733333, 0.14902, 0.14902, 1 )

[sub_resource type="CylinderMesh" id=8]
radial_segments = 8
rings = 1

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
albedo_color = Color( 0.027451, 0.92549, 0.968627, 0.396078 )

[sub_resource type="CylinderShape" id=10]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, -0.00524998, 0, 6.83326 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 0, 0.767077 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance2"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance2/StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 0, 1.78204 )
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance3"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance3/StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 0, 2.79209 )
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance4"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance4/StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 0, 3.80195 )
mesh = SubResource( 1 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance5"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance5/StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance6" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 0, 4.80499 )
mesh = SubResource( 1 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0894279 )

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance6/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.077899 )
shape = SubResource( 3 )

[node name="MeshInstance7" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 0, 5.82227 )
mesh = SubResource( 1 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance7"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance7/StaticBody"]
shape = SubResource( 3 )

[node name="top" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.330607, 4.36728 )

[node name="Control" parent="." instance=ExtResource( 3 )]

[node name="tok" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="point" type="MeshInstance" parent="."]
transform = Transform( 2.48353, 0, 0, 0, 0.0352122, 2.25976, 0, 0.000543991, -0.000211916, -0.0762238, -0.405457, 11.187 )
cast_shadow = 0
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Area" type="Area" parent="point"]
transform = Transform( 0.208917, 0, 0, 0, 0.0891088, 1827.17, 0, 0.228744, -28.4715, -0.000243234, -22580.3, 352.025 )

[node name="CollisionShape" type="CollisionShape" parent="point/Area"]
transform = Transform( 1, 0, 0, 0, 0.0457388, 0.998953, 0, -0.998953, 0.045754, 0, 0.000104737, 14.1607 )
shape = SubResource( 10 )
[connection signal="yan" from="." to="Control" method="_on_Node_yan"]
[connection signal="body_entered" from="point/Area" to="." method="_on_Area_body_entered"]
